--- a/api-cloud-gateway/src/main/resources/application-header.yml
+++ b/api-cloud-gateway/src/main/resources/application-header.yml
@@ -4,10 +4,10 @@ spring:
     gateway:
       routes:
         - id: bank-service
-          uri: http://localhost:8081
+          uri: http://bank-service:8081
           predicates:
           - Header= service,bank
         - id: customer-service
-          uri: http://localhost:8082
+          uri: http://customer-service:8082
           predicates:
           - Header= service,customer
