--- a/api-cloud-gateway/src/main/resources/application-path.yml
+++ b/api-cloud-gateway/src/main/resources/application-path.yml
@@ -4,13 +4,13 @@ spring:
     gateway:
       routes:
         - id: bank-service
-          uri: http://localhost:8081
+          uri: http://bank-service:8081
           predicates:
           - Path= /bankms/*
           filters:
           - StripPrefix=1
         - id: customer-service
-          uri: http://localhost:8082
+          uri: http://customer-service:8082
           predicates:
           - Path= /customerms/*
           filters:
