--- a/api-cloud-gateway/src/main/resources/application-query.yml
+++ b/api-cloud-gateway/src/main/resources/application-query.yml
@@ -5,10 +5,10 @@ spring:
     gateway:
       routes:
         - id: bank-service
-          uri: http://localhost:8081
+          uri: http://bank-service:8081
           predicates:
           - Query= service,bankms
         - id: airtel-service
-          uri: http://localhost:8082
+          uri: http://customer-service:8082
           predicates:
           - Query= service,customerms
