--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3'
 services:
   config-server:
     build: ./config-server
@@ -44,5 +44,22 @@ services:
       - customer-service
       - bank-service
     environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:9000/eureka
-      SPRING_CLOUD_CONFIG_URI: http://config-server:8888
+      SPRING_APPLICATION_JSON: '{
+        "eureka.client.service-url.default-zone": "http://eureka-server:9000/eureka",
+        "spring.cloud.config.uri": "http://config-server:8888",
+        "spring.cloud.gateway.routes":
+        [
+          {
+            "id": "bank-service",
+            "uri": "http://bank-service:8081",
+            "predicates": [ "Path= /bankms/**" ],
+            "filters": [ "StripPrefix=1" ]
+          },
+          {
+            "id": "customer-service",
+            "uri": "http://customer-service:8082",
+            "predicates": [ "Path= /customerms/**" ],
+            "filters": [ "StripPrefix=1" ]
+          }
+        ]
+      }'
